--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 
 <head>
+    <link rel="stylesheet" href="css/styleindex.css">
     <meta charset="UTF-8">
     <title>Texto na ABA </title>
 </head>
@@ -68,7 +69,7 @@
         <a href="index.html">Página inicial</a>
     </li>
     <li>
-        <a href="img/html-css.html">Exemplos de HTML com CSS</a>
+        <a href="html-css.html">Exemplos de HTML com CSS</a>
     </li>
     <li>
         <a href="img/404.html">Página de erro dentro da pasta IMGs</a>
@@ -88,6 +89,14 @@
     </li>
 </ul>
 
+<hr>
+
+<h1>Maneiras de adicionar imagens ao site:</h1>
+<h2>Por endereço da imagem:</h2>
+
+<a href="https://api.whatsapp.com/send/?phone=5514997145101&text=Salve%20parceiro" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/1198px-WhatsApp.svg.png" alt="ícone do whatsapp" width="160" class="zapzap">
+</a>
 
 
 
