--- a/img/404.html
+++ b/img/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style404.css">
     <meta charset="UTF-8">
     <title>404</title>
 
